--- a/dictionary.html
+++ b/dictionary.html
@@ -444,15 +444,17 @@ div.tocify {
 ##  [5] &quot;data_wrangling.knit.html&quot;  &quot;data_wrangling.Rmd&quot;       
 ##  [7] &quot;data_wrangling_cache&quot;      &quot;diamonds2.rds&quot;            
 ##  [9] &quot;diamonds3.rds&quot;             &quot;diamonds4.rds&quot;            
-## [11] &quot;diamonds5.rds&quot;             &quot;dictionary.Rmd&quot;           
-## [13] &quot;docs&quot;                      &quot;ggplot_graphs.Rmd&quot;        
-## [15] &quot;images&quot;                    &quot;index.Rmd&quot;                
-## [17] &quot;journal.Rmd&quot;               &quot;journal_cache&quot;            
-## [19] &quot;journal_files&quot;             &quot;lab_journal_website.Rproj&quot;
-## [21] &quot;links.Rmd&quot;                 &quot;machine_learning.Rmd&quot;     
-## [23] &quot;README.md&quot;                 &quot;sales_by_state.R&quot;         
-## [25] &quot;site_libs&quot;                 &quot;style.css&quot;                
-## [27] &quot;testfile.rds&quot;</code></pre>
+## [11] &quot;diamonds5.rds&quot;             &quot;dictionary.html&quot;          
+## [13] &quot;dictionary.Rmd&quot;            &quot;dictionary_files&quot;         
+## [15] &quot;docs&quot;                      &quot;ggplot_graphs.html&quot;       
+## [17] &quot;ggplot_graphs.Rmd&quot;         &quot;ggplot_graphs_files&quot;      
+## [19] &quot;images&quot;                    &quot;index.html&quot;               
+## [21] &quot;index.Rmd&quot;                 &quot;journal.Rmd&quot;              
+## [23] &quot;journal_cache&quot;             &quot;journal_files&quot;            
+## [25] &quot;lab_journal_website.Rproj&quot; &quot;links.Rmd&quot;                
+## [27] &quot;machine_learning.Rmd&quot;      &quot;README.md&quot;                
+## [29] &quot;sales_by_state.R&quot;          &quot;site_libs&quot;                
+## [31] &quot;style.css&quot;                 &quot;testfile.rds&quot;</code></pre>
 <p>…</p>
 <hr />
 </div>
