--- a/dictionary.html
+++ b/dictionary.html
@@ -439,23 +439,25 @@ div.tocify {
 <li><code>list.files()</code> This function lists all the names of each file in a given R project.</li>
 </ol>
 <pre class="r"><code>list.files()</code></pre>
-<pre><code>##  [1] &quot;_site.yml&quot;                  &quot;3_Data_Acquisition_Bikes.R&quot;
-##  [3] &quot;bike_data.json&quot;             &quot;build_website.R&quot;           
-##  [5] &quot;businesscase_topic3.R&quot;      &quot;Challenge2-1.R&quot;            
-##  [7] &quot;Challenge2-2.R&quot;             &quot;data-science&quot;              
-##  [9] &quot;data_wrangling.html&quot;        &quot;data_wrangling.knit.html&quot;  
-## [11] &quot;data_wrangling.Rmd&quot;         &quot;data_wrangling_cache&quot;      
-## [13] &quot;diamonds2.rds&quot;              &quot;diamonds3.rds&quot;             
-## [15] &quot;diamonds4.rds&quot;              &quot;diamonds5.rds&quot;             
-## [17] &quot;dictionary.Rmd&quot;             &quot;docs&quot;                      
-## [19] &quot;ggplot_graphs.Rmd&quot;          &quot;images&quot;                    
-## [21] &quot;index.Rmd&quot;                  &quot;journal.Rmd&quot;               
-## [23] &quot;journal_cache&quot;              &quot;journal_files&quot;             
-## [25] &quot;lab_journal_website.Rproj&quot;  &quot;links.Rmd&quot;                 
-## [27] &quot;machine_learning.Rmd&quot;       &quot;README.md&quot;                 
-## [29] &quot;sales_by_state.R&quot;           &quot;site_libs&quot;                 
-## [31] &quot;style.css&quot;                  &quot;testfile.rds&quot;              
-## [33] &quot;theory_topic3.R&quot;            &quot;theory_topic4.R&quot;</code></pre>
+<pre><code>##  [1] &quot;_site.yml&quot;                 &quot;bike_data.json&quot;           
+##  [3] &quot;build_website.R&quot;           &quot;businesscase_topic3.R&quot;    
+##  [5] &quot;Challenge2-1.R&quot;            &quot;Challenge2-2.R&quot;           
+##  [7] &quot;data-science&quot;              &quot;data_wrangling.html&quot;      
+##  [9] &quot;data_wrangling.knit.html&quot;  &quot;data_wrangling.Rmd&quot;       
+## [11] &quot;data_wrangling_cache&quot;      &quot;diamonds2.rds&quot;            
+## [13] &quot;diamonds3.rds&quot;             &quot;diamonds4.rds&quot;            
+## [15] &quot;diamonds5.rds&quot;             &quot;dictionary.html&quot;          
+## [17] &quot;dictionary.Rmd&quot;            &quot;dictionary_files&quot;         
+## [19] &quot;docs&quot;                      &quot;ggplot_graphs.html&quot;       
+## [21] &quot;ggplot_graphs.Rmd&quot;         &quot;ggplot_graphs_files&quot;      
+## [23] &quot;images&quot;                    &quot;index.html&quot;               
+## [25] &quot;index.Rmd&quot;                 &quot;journal.Rmd&quot;              
+## [27] &quot;journal_cache&quot;             &quot;journal_files&quot;            
+## [29] &quot;lab_journal_website.Rproj&quot; &quot;links.Rmd&quot;                
+## [31] &quot;machine_learning.Rmd&quot;      &quot;README.md&quot;                
+## [33] &quot;sales_by_state.R&quot;          &quot;site_libs&quot;                
+## [35] &quot;style.css&quot;                 &quot;testfile.rds&quot;             
+## [37] &quot;theory_topic3.R&quot;           &quot;theory_topic4.R&quot;</code></pre>
 <p>…</p>
 <hr />
 </div>
